# GliomaSolver

./: .gitattributes  .gitignore  COPYRIGHT  README.md
Anatomy/: README.txt
Examples/BrainDeform/: readme.md  run_kraken.sh
Examples/HelmholtzTest/: run_hybrid_kraken.sh
Examples/PatientSpecificInference/: preprocessData.sh
Examples/TumorGrowth/: readme.md  run_kraken.sh  run_lrz.sh
GliamoSolverXcode_kraken/GliamoSolverXcode_kraken/: GliamoSolverXcode_kraken.cp  GliamoSolverXcode_kraken.h  GliamoSolverXcode_krakenPriv.h  GliamoSolverXcode_krakenProj.xcconfig  GliamoSolverXcode_krakenTarget.xcconfig
GliamoSolverXcode_kraken/GliamoSolverXcode_kraken.xcodeproj/: project.pbxproj
Glioma/: Glioma.h  Glioma_BrainDeformation.cpp  Glioma_BrainDeformation.h  Glioma_BrainDeformationTimeRelaxation.cpp  Glioma_BrainDeformationTimeRelaxation.h  Glioma_ComputePFF_CahnHilliard.cpp  Glioma_ComputePFF_CahnHilliard.h  Glioma_ReactionDiffusion.cpp  Glioma_ReactionDiffusion.h  Glioma_Types.h  Glioma_UQ_DataPreprocessing.cpp  Glioma_UQ_DataPreprocessing.h  Glioma_main.cpp  Test.cpp  Test.h  dat2VP.cpp  dat2VP.h
Glioma/Operators/: AdvectionConvectionOperator.h  AdvectionOperator.h  CahnHilliardOperator.h  Glioma_ReactionDiffusionOperator.h  GradientOperator.h  HelmholtzSolver2D_Hypre.h  HelmholtzSolver3D_Hypre.h  HelmholtzSolver3D_Hypre_MPI.h  PressureOperator.h  ReactionDiffusionOperator.h  TimeUpdateOperator.h  TissueAdvectionOperator.h
Glioma/Tests/: HelmholtzTest.cpp  HelmholtzTest.h  HelmholtzTest_MPI.cpp  HelmholtzTest_MPI.h  Test.h
Glioma/others/: AdvectionOperator.h  Glioma_BrainDeformationTimeRelaxation.h  HypreSolver.h
GliomaSolverXcode.xcodeproj/: project.pbxproj
GliomaSolverXcode/Glioma/: Glioma_BrainDeformation.cpp  Glioma_BrainDeformation.h  Glioma_ReactionDiffusion.h  Glioma_Types.h  Glioma_main.cpp
GliomaSolverXcode/GliomaSolverXcode/: GliomaSolverXcode.cp  GliomaSolverXcode.h  GliomaSolverXcodePriv.h  GliomaSolverXcodeTarget.xcconfig  Info.plist
INSTALL/: install  install_InferenceTools_on_linux-64-bit.sh  install_inferenceTools
INSTALL/tools/: install_InferenceTools_on_mac-64-bit.sh
Installation/: install_GliomaSolver_on_linux-64-bit.sh  install_GliomaSolver_on_mac-64-bit.sh  install_InferenceTools_on_linux-64-bit.sh  install_on_linux-64-bit.sh  install_on_mac-64-bit.sh
MRAG/: MRAGHeaders.h
MRAG/MRAGcore/: MRAGBitStream.h  MRAGBlock.h  MRAGBlockCollection.h  MRAGBlockFWT.h  MRAGBoundaryBlockInfo.cpp  MRAGBoundaryBlockInfo.h  MRAGCache.h  MRAGCommon.h  MRAGCompressionPlan.h  MRAGCompressor.h  MRAGEnvironment.h  MRAGGridNode.h  MRAGHelperMacros.h  MRAGHuffmanEncoder.h  MRAGMatrix2D.h  MRAGMatrix4D.h  MRAGProfiler.cpp  MRAGRefinementPlan.h  MRAGRefiner_Greedy.h  MRAGWavelets_AverageInterp3rdOrder.h  MRAGWavelets_Bior22.h  MRAGWavelets_Haar.h  MRAGWavelets_Interp2ndOrder.h  MRAG_BBInfoCreator.inl  MRAG_STDTestL1_BlockCollection.h  MRAG_STDTestL1_BoundaryInfo.h  MRAG_STDTestL1_Grid.h  MRAG_STDTestL2.h  MRAG_STDTestL2_Compression.h  MRAG_STDTestL2_Generator.h  MRAG_STDTestL2_Refinement.h  MRAG_STDTestL3_VectorAdvection.h  MRAG_SmartBoundaryInfo.h  MRAGrid.h  MRAGridHelpers.h
MRAG/MRAGio/: DumpScalarToVP.h  MRAG_IO_BaseClass.h  MRAG_IO_Binary.h  MRAG_IO_Native.h  MRAG_IO_VTK.h  MRAG_IO_VTKMB.h  MRAG_IO_VTU3D.h
MRAG/MRAGmultithreading/: MRAGAddressable_CUDA.h  MRAGBBPackHandler_CUDA.cpp  MRAGBBPackHandler_CUDA.h  MRAGBlockCollection_CUDA.h  MRAGBlockProcessing_CUDA.h  MRAGBlockProcessing_CUDACore.h  MRAGBlockProcessing_SingleCPU.h  MRAGBlockProcessing_TBB.h
MRAG/MRAGscience/: MRAGRefiner_SpaceExtension.h  MRAGSpaceTimeSorter.h  MRAGWeno.h  candidate_SpaceTimeSorterEuler.h
MRAG/MRAGtests/: MRAG_STDTestL4_LevelsetAdvection_Beta.h
MRAG/MRAGvisual/: GridViewer.h  MRAGVisualTypes.h
ProcessingData/lib/: NIFTIexport.m  NIFTIimport.m  removeNvoxelsFromBorder.m
ProcessingData/source/: convert_folder_content_nii2dat.m  processAtlasTissue.m
Simulations/BrainDeform/: readme.md
Simulations/BrainDeformations/: README.md  run.sh  run_lrz.sh
Simulations/PFF-CH/: run_kraken.sh
Simulations/PatientInference/: Input.txt  setupInference.sh
Simulations/TumorGrowth/: readme.md  run.sh  run_jana.sh
makefile/: Makefile  make.jana  make.kraken  setup_jana.sh  setup_kraken.sh  setup_lrz.sh
makefile/BrainDeform/: run_deform_hybridJob_kraken.sh  run_deform_mpi.sh  run_deform_mpi_jana.sh  run_hybridJob_mpp3.sh  run_lrz.sh
makefile/BrainDeformTime/: run.sh  run_jana.sh
makefile/Dump2VP/: run.sh
makefile/HelmholtzTest/: hypre_serial.txt  run_hybridJob_mpp3.sh  run_hybrid_kraken.sh
makefile/PFF-CH/: run.sh  run_jana.sh
makefile/TumorGrowth/: readme.md  run.sh  run_jana.sh  run_kraken.sh  run_lrz.sh
makefile/tools.make/: Makefile  make.cluster  make.jana  make.linux  make.lrz  make.mac  setup_linux.sh  setup_lrz.sh  setup_mac.sh
pi4u_lite/: ChangeLog  README
pi4u_lite/tools/: Makefile  cmaes.c  engine_ss1.cpp  engine_ss2.cpp  engine_tmcmc_sn.c  fd_deriv.c  fd_grad.c  fitfun.c  fitfun_glioma.c  gsl_headers.h  initials.par  propagation_tool.c  run_tmcmcMC.sh  runtmcmc.lsf.sh  spawner.c  ss_db.cpp  tmcmc.par  tmcmc_glioma.par  tmcmc_stats.c
pi4u_lite/torc_lite/: Makefile.in  README  configure.ac
pi4u_lite/torc_lite/demo/: async.c  broadcast.c  fibo.c  mbench1.c  pipe.c  struct.c  zerolength.c
pi4u_lite/torc_lite/include/: locks.h  torc_config.h.in  torc_internal.h  torcf.h  utils.h
pi4u_lite/torc_lite/nullmpi/: Makefile.in  configure
pi4u_lite/torc_lite/nullmpi/include/: mpi.h  mpif.h
pi4u_lite/torc_lite/nullmpi/lib/: Makefile
pi4u_lite/torc_lite/src/: Makefile.am  torc.c  torc_comm.c  torc_runtime.c  torc_server.c  torc_thread.c
tools/: setupInference.sh
tools/pi4u_lite/: AUTHORS
tools/pi4u_lite/torc_lite/demo/: Makefile  Makefile.am  Makefile.in  async  broadcast  fibo  masterslave  masterslave.c  mbench1  pipe  struct  zerolength
tools/pi4u_lite/torc_lite/scripts/: Makefile  Makefile.am  Makefile.in  torc_cflags  torc_libs
tools/scripts/: GenericPrior.txt  extractInferenceOutput.sh  mapDataToMRAGrid.sh  runAll.sh  writeRunAll.sh  (+1 more)
(+200 files in other folders)
